# OctoPrint-M117NavBar

./: MANIFEST.in  README.md  Taskfile.yml  pyproject.toml  setup.py
octoprint_M117NavBar/: __init__.py
octoprint_M117NavBar/static/js/: M117NavBar.js
octoprint_M117NavBar/static/templates/: M117NavBar_navbar.jinja2
octoprint_M117NavBar/templates/: M117NavBar_navbar.jinja2
