[build-system]
requires = [
    "setuptools>=68",
]
build-backend = "setuptools.build_meta"

[project]
name = "OctoPrint-M117NavBar"
version = "0.1.2"
description = "Simple plugin that sends M117 messages in gcode to the web interface."
authors = [
    { name = "jneilliii", email = "jneilliii+octoprint@gmail.com" },
]
requires-python = ">=3.7,<4"
dependencies = []
dynamic = [
    "license",
]

[project.entry-points."octoprint.plugin"]
M117NavBar = "octoprint_M117NavBar"

[project.urls]
Homepage = "https://github.com/jneilliii/OctoPrint-M117NavBar"

[project.optional-dependencies]
develop = [
    "go-task-bin",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = [
    "octoprint_M117NavBar",
    "octoprint_M117NavBar.*",
]
